# ai-lab

./: .env.example  readme.md  readme.txt
cv_chat/: README.md  app.py  deepseek_demo.py  main.ipynb
cv_chat/data/: summary.txt
experiments/: management_account.html
experiments/latest_ai_development/: pyproject.toml
experiments/latest_ai_development/output/: refined_research.md  report_critique.md  report_quality_check.md  report_reporting_task.md  report_research_critique.md
experiments/latest_ai_development/src/latest_ai_development/: crew.py
experiments/latest_ai_development/src/topic_report/: crew.py  main.py
experiments/latest_ai_development/src/topic_report/config/: agents.yaml  tasks.yaml
